// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`troubleshoot - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy, evaluate, and manage Microsoft Foundry agents and models. Covers agent creation, provision, deployment, invocation, evaluation, trace analysis, prompt optimization, dataset curation, RBAC role assignments and permissions, capacity and region discovery, AI Services and Cognitive Services resources. WHEN: "deploy Foundry agent", "create Foundry agent", "evaluate agent", "optimize prompt", "deploy model", "role assignments on Foundry", "capacity and region for Foundry", "AI Services for Foundry", "continuous eval", "hosted agent", "Foundry project". DO NOT USE FOR: Azure Functions, App Service, general Azure deployment.",
  "extractedKeywords": [
    "agent",
    "agents",
    "ai",
    "analysis",
    "assignments",
    "azure",
    "capacity",
    "cli",
    "cognitive",
    "container",
    "continuous",
    "covers",
    "create",
    "creation",
    "curation",
    "dataset",
    "deploy",
    "deployment",
    "discovery",
    "eval",
    "evaluate",
    "evaluation",
    "foundry",
    "functions",
    "general",
    "hosted",
    "invocation",
    "manage",
    "mcp",
    "microsoft",
    "model",
    "models",
    "monitor",
    "optimization",
    "optimize",
    "permissions",
    "project",
    "prompt",
    "provision",
    "rbac",
    "region",
    "resources",
    "role",
    "service",
    "services",
    "trace",
    "validation",
    "vnet",
    "when",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`troubleshoot - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "ai",
  "analysis",
  "assignments",
  "azure",
  "capacity",
  "cli",
  "cognitive",
  "container",
  "continuous",
  "covers",
  "create",
  "creation",
  "curation",
  "dataset",
  "deploy",
  "deployment",
  "discovery",
  "eval",
  "evaluate",
  "evaluation",
  "foundry",
  "functions",
  "general",
  "hosted",
  "invocation",
  "manage",
  "mcp",
  "microsoft",
  "model",
  "models",
  "monitor",
  "optimization",
  "optimize",
  "permissions",
  "project",
  "prompt",
  "provision",
  "rbac",
  "region",
  "resources",
  "role",
  "service",
  "services",
  "trace",
  "validation",
  "vnet",
  "when",
]
`;
